--- a/calander/index.html
+++ b/calander/index.html
@@ -9,18 +9,101 @@
 <body>
 	<div id="wrap">
 		<div id="header">
-			<a href="">header</a>
+			Calander - 8조
 		</div>
 		<div id="menu">
 			<div id="menu_body">
-				<a href="">menu_body</a>
+				 <input class="menu_button" type="button" value="일정쓰기" >
+                 <input class="menu_button" type="button" value="기념일관리" >
+
+                 <!-- 메뉴영역 달력 start -->
+                  <table id="menu_calander">
+                    <tr id="mc_top">
+                      <td class="mc_pointer" colspan="2" >◀</td>
+                      <td colspan="3" align="center">
+                        <div id="mc_year">2014</div>
+                        <div id="mc_month">10</div>
+                      </td>
+                      <td class="mc_pointer" colspan="2" >▶</td>
+                    </tr>
+                    <tr class="mc_border"><td colspan="7" height="1"></td></tr>
+                    <tr id="week_col">
+                      <td id="sun">일</td>
+                      <td id="mon">월</td>
+                      <td id="tues">화</td>
+                      <td id="wed">수</td>
+                      <td id="thu">목</td>
+                      <td id="fri">금</td>
+                      <td id="sat">토</td>
+                    </tr>
+                    <tr class="mc_border"><td colspan="7" height="1"></td></tr>
+                    <tr class="mday_col" >
+                      <td class="csfont">28</td>
+                      <td class="cfont">29</td>
+                      <td class="cfont">30</td>
+                      <td class="cfont">1</td>
+                      <td class="cfont">2</td>
+                      <td class="cfont">3</td>
+                      <td class="cfont">4</td>
+                    </tr>
+                    <tr class="mday_col">
+                      <td class="csfont">5</td>
+                      <td class="cfont">6</td>
+                      <td class="cfont">7</td>
+                      <td class="cfont">8</td>
+                      <td class="cfont">9</td>
+                      <td class="cfont">10</td>
+                      <td class="cfont">11</td>
+                    </tr>
+                    <tr class="mday_col">
+                      <td class="csfont">12</td>
+                      <td class="cfont">13</td>
+                      <td class="cfont">14</td>
+                      <td class="cfont">15</td>
+                      <td class="cfont">16</td>
+                      <td class="cfont">17</td>
+                      <td class="cfont">18</td>
+                    </tr>
+                    <tr class="mday_col">
+                      <td class="csfont">19</td>
+                      <td class="cfont">20</td>
+                      <td class="cfont">21</td>
+                      <td class="cfont">22</td>
+                      <td class="cfont">23</td>
+                      <td class="cfont">24</td>
+                      <td class="cfont">25</td>
+                    </tr>
+                    <tr class="mday_col">
+                      <td class="csfont">26</td>
+                      <td class="cfont">27</td>
+                      <td class="cfont">28</td>
+                      <td class="cfont">29</td>
+                      <td class="cfont">30</td>
+                      <td class="cfont">31</td>
+                      <td class="cfont">1</td>
+                    </tr>
+                    <tr class="mday_col">
+                      <td class="csfont">2</td>
+                      <td class="cfont">3</td>
+                      <td class="cfont">4</td>
+                      <td class="cfont">5</td>
+                      <td class="cfont">6</td>
+                      <td class="cfont">7</td>
+                      <td class="cfont">8</td>
+                    </tr>
+                    <tr class="mc_border"><td colspan="7" height="1"></td></tr>
+                  </table>
+                  <!-- 메뉴영역 달력 end -->
+			</div>
+			<div id="menu_hide">
+				<a href="">◀</a>
 			</div>
 		</div>
 		<div id="content">
 			<a href="">content</a>
 		</div>
 		<div id="footer">
-			<a href="">footer</a>
+			8조 - 박정현, 최기영, 하늘찬
 		</div>
 	</div>
 </body>
