--- a/calander/index.html
+++ b/calander/index.html
@@ -13,20 +13,20 @@
 		</div>
 		<div id="menu">
 			<div id="menu_body">
-				 <input class="menu_button" type="button" value="일정쓰기" >
-                 <input class="menu_button" type="button" value="기념일관리" >
+				<input class="menu_button" type="button" value="일정쓰기" >
+        <input class="menu_button" type="button" value="기념일관리" >
 
                  <!-- 메뉴영역 달력 start -->
                   <table id="menu_calander">
                     <tr id="mc_top">
                       <td class="mc_pointer" colspan="2" >◀</td>
-                      <td colspan="3" align="center">
+                      <td colspan="3">
                         <div id="mc_year">2014</div>
                         <div id="mc_month">10</div>
                       </td>
                       <td class="mc_pointer" colspan="2" >▶</td>
                     </tr>
-                    <tr class="mc_border"><td colspan="7" height="1"></td></tr>
+                    <tr class="mc_border"><td class="mc_border" colspan="7"></td></tr>
                     <tr id="week_col">
                       <td id="sun">일</td>
                       <td id="mon">월</td>
@@ -36,7 +36,7 @@
                       <td id="fri">금</td>
                       <td id="sat">토</td>
                     </tr>
-                    <tr class="mc_border"><td colspan="7" height="1"></td></tr>
+                    <tr class="mc_border"><td class="mc_border" colspan="7"></td></tr>
                     <tr class="mday_col" >
                       <td class="csfont">28</td>
                       <td class="cfont">29</td>
@@ -91,7 +91,7 @@
                       <td class="cfont">7</td>
                       <td class="cfont">8</td>
                     </tr>
-                    <tr class="mc_border"><td colspan="7" height="1"></td></tr>
+                    <tr class="mc_border"><td class="mc_border" colspan="7"></td></tr>
                   </table>
                   <!-- 메뉴영역 달력 end -->
 			</div>
