content and memo

--- a/calander/index.html
+++ b/calander/index.html
@@ -94,6 +94,17 @@
                     <tr class="mc_border"><td class="mc_border" colspan="7"></td></tr>
                   </table>
                   <!-- 메뉴영역 달력 end -->
+                  <div id="menu_memo">
+                      <div class="memo_box">
+                      <textarea cols="36" rows="10" name="memo" value="메모">메모를 입력하세요</textarea>
+                      </div>
+                      <input class="memo_button" type="button" value="등록">
+                  </div>
+                  <div id="menu_check">
+                      <a href="">전체 일정 보기</a></br>
+                      <a href="">중요 일정 보기</a></br>
+                      <a href="">오래된 일정 삭제</a>
+                  </div>
             </div>
             <div id="menu_hide">
                 <a href="">◀</a>
@@ -127,6 +138,81 @@
                           </tr>
                         </tbody>
                     </table>
+                    <div class="month_row">
+                        <table class="week_row">
+                            <tbody>
+                                <tr>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                 <th></th>
+                                 <th></th>
+                                 <th></th>
+                                 <th></th>
+                               </tr>
+                           </tbody>
+                       </table>
+                    </div>
+                    <div class="month_row">
+                        <table class="week_row">
+                            <tbody>
+                                <tr>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>                   
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="month_row">
+                        <table class="week_row">
+                            <tbody>
+                                <tr>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="month_row">
+                        <table class="week_row">
+                            <tbody>
+                                <tr>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                </tr>
+                            </tbody>
+                        </table>  
+                    </div>
+                    <div class="month_row">
+                        <table class="week_row">
+                            <tbody>
+                               <tr>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                  <th></th>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
