--- a/calander/login_jsp/WebContent/html/index.html
+++ b/calander/login_jsp/WebContent/html/index.html
@@ -110,7 +110,7 @@
                 <a href="">◀</a>
             </div>
         </div>
-        <div id="content">
+        <div id="c_content">
           
             <div id="content_search">
                 <input class="search_text", type="text" value="일정검색">
